feat: изменил контракт на асинхронную обработку ответа пользователя со стороны мл. Переписал логику сценария
